<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnMatematicas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_matematicas" />

    <Button
        android:id="@+id/btnFisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_fisica" />

    <Button
        android:id="@+id/btnEstadistica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_estadistica" />
</LinearLayout>